--- a/installer/roles/local_docker/defaults/main.yml
+++ b/installer/roles/local_docker/defaults/main.yml
@@ -1,3 +1,10 @@
 ---
 rabbitmq_version: "3.7.4"
 rabbitmq_image: "ansible/awx_rabbitmq:{{rabbitmq_version}}"
+
+awx_volumes: >
+  {{
+    [project_data_dir + ':/var/lib/awx/projects:rw'] if project_data_dir is defined else []
+    + [ca_trust_dir + ':/etc/pki/ca-trust:ro'] if ca_trust_dir is defined else []
+    + custom_volumes if custom_volumes is defined else []
+  }}
